# YASE

./: .gitignore  CMakeLists.txt  CMakeSettings.json
YASE/: CMakeLists.txt  YASE.cpp  YASE.h  animation_manager.h  base_manager.h  camera.h  env_manager.h  environment.h  logger.h  model.h  model_manager.h  scene.h  scene_manager.h  shader_manager.h  skybox_manager.h  sound_manager.h  texture_manager.h
asset_converter/: CMakeLists.txt  main.cpp
fb_def/: base.fbs  env.fbs
fb_def/include/: base_generated.h  env_generated.h
proto_def/: CMakeLists.txt  base.proto  env.proto  mesh.proto  scene.proto  shader.proto  skybox.proto  texture.proto
wutils/: CMakeLists.txt  vfs.h  vfs_local.cpp
wutils/test/: CMakeLists.txt  local_fs.cpp
wutils/vfs/: CMakeLists.txt
wutils/vfs/include/: vfs.h
wutils/vfs/test/: CMakeLists.txt
yase/: CMakeLists.txt  animation_manager.cpp  base_manager.cpp  camera.cpp  env_manager.cpp  model_manager.cpp  scene_manager.cpp  skybox_manager.cpp  texture_manager.cpp
yase/include/: animation_manager.h  asset_converter.h  base_manager.h  camera.h  env_manager.h  model.h  model_manager.h  scene_manager.h  shader_manager.h  skybox_manager.h  sound_manager.h  texture_manager.h
yase_creator/: CMakeLists.txt  env_page.h  home.h  main.cpp  other_page.h
yase_creator/default_shaders/: frag_shader.glsl  vert_shader.glsl
